update voucher by tinhrenzi